# SnippetCode

./: .gitignore  README.md
c/: README.md
c/automake/codeServer-v1.22/: Makefile  Makefile.am  Makefile.am.bk  Makefile.in  ReadMe.txt  ReadMe.txt.bak  ReadMe.txt~  agent_api.h  config.status  configure  configure.in  dm642server.c  dm642server.c~  dm642server.h~  ds40xxhcApi.h  my_errno.h  readdeploy.c  readdeploy.h  update_log.txt  编码参数说明.txt
c/automake/codeServer-v1.22/.deps/: agent_api.Po  dm642server.Po  readdeploy.Po
c/automake/codeServer-v1.22/autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
c/automake/codeServer-v1.22/codeserver-1.22/: DataType.h  Makefile.in  agent_api.c  dm642server.h
c/automake/codeServer-v1.22/codeserver-1.22/_build/: Makefile  config.status
c/automake/codeServer-v1.22/codeserver-1.22/_build/.deps/: dm642server.Po
c/automake/src/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.in  test
c/automake/src/.deps/: test.Po
c/automake/src/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
dot/: erengine.dot  html2.dot  programming.dot  start_end.dot  test.dot
kernel/: .helloworld.ko.cmd  .helloworld.mod.o.cmd  .helloworld.o.cmd
python/: con264.py  mid3iconv
shell/: README.md  example.sh  git-lost-found.sh  sync_github.sh  test
xmind/: SuperNote.xmind  VFS模型.xmind  WifiStateMachine.xmind  before-entrepreneurial-thinking.xmind  how-to-become-a-successful-professional-managers.xmind  mind-map-mind-map-7-steps-seven-steps-.xmind  (+3 more)
(+1782 files in other folders)
