#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.60)
AC_INIT(codeserver, 1.22)
AM_INIT_AUTOMAKE(codeserver, 1.22)
AC_CONFIG_SRCDIR([DataType.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
CCFLAGS=$CCFLAGS
LIBS="$LIBS -L../lib -lSDL -lpthread -lds40xxhc"

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netinet/in.h stdlib.h string.h strings.h sys/socket.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_SELECT_ARGTYPES
AC_CHECK_FUNCS([memchr memset regcomp select socket])

AC_OUTPUT(Makefile)
